correct issues with clear button not showing, still solving for getItem for local storage

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ textarea{
 }
 
 .saveBtn {
-  border-left: 1px solid black;
+  border-left: 1px solid #02677e;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
@@ -70,4 +70,11 @@ textarea{
 .saveBtn i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
+}
+
+.clearBtn{
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  background-color: #02677e;
+  color: white;
 }
